--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
                 <code>
             door_opened = False
             bowl_empty = True
-            if bown_empty or (not door_opened):
+            if bowl_empty or not door_opened:
                 print("Maaaaaaooouuu")
                 </code>
             </pre>           
